# DiscordMCP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
src/discord_mcp_platform/: errors.py
src/discord_mcp_platform/api/: deps.py
src/discord_mcp_platform/app/: bot_state.py  lifecycle.py  logging.py  main.py  settings.py
src/discord_mcp_platform/automations/: actions.py  definitions.py  engine.py  evaluators.py  scheduler.py  triggers.py
src/discord_mcp_platform/control_plane/: bot_configs.py  channel_policies.py  guild_policies.py  installations.py  mcp_clients.py  workspaces.py
src/discord_mcp_platform/db/: base.py  models.py
src/discord_mcp_platform/discord/: bot_runtime.py  gateway.py  models.py  oauth.py  permissions.py  rate_limits.py  rest_client.py  slash_commands.py  snowflake.py
src/discord_mcp_platform/mcp/: auth.py  context.py  server.py
src/discord_mcp_platform/security/: allowlist.py  policy.py  redaction.py  secrets.py  validation.py
src/discord_mcp_platform/services/: agent_service.py  agent_tools.py  (+11 more)
tests/: conftest.py  test_agent_service.py  test_audit_redaction.py  test_automation_draft.py  test_channel_service.py  test_guild_list.py  test_guild_service_new.py  test_invite_service.py  test_member_service.py  test_message_service.py  test_oauth.py  test_permissions.py  test_role_service.py  test_settings.py  test_snowflake.py  test_webhook_service.py
(+31 files in other folders)
